# deploy_with_cqrs

./: .gitignore  Cargo.toml  demo.db-shm  demo.db-wal  readme.md
migrations/: 20241205095605_init.sql
src/: config.rs  deployment.rs  helper.rs  lib.rs  main.rs  queries.rs  state.rs
