[package]
name = "deploy_with_cqrs"
version = "0.1.0"
edition = "2021"

[dependencies]
cqrs-es = "0.4.2"
sqlite-es = "0.4.2"
async-trait = "0.1.52"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
actix-web = "4.9.0"
uuid = { version = "1.11.0", features = [ "v4" ] }
sqlx = { version = "0.8.2", features = [ "json", "runtime-tokio-rustls", "sqlite" ] }
